--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -10,7 +11,7 @@ html {
 }
 
 body {
-  background: #eee;
+  background-color: #a3e0d0 !important;
   padding: 0 16px;
 }
 
@@ -26,6 +27,60 @@ header h1 {
   color: #fff;
   font-family: "McLaren", cursive;
   font-weight: 200;
+}
+
+.grocerylistheading h1 {
+  padding: 0.2rem 1.2rem;
+  border-radius: 3px;
+  font-size: 1.5rem;
+  font-family: 'Indie Flower', cursive;
+}
+
+.form input {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: transparent;
+  padding: 0.2rem;
+  border-bottom-right-radius: 15px 3px;
+  border-bottom-left-radius: 3px 15px;
+  border: solid 3px transparent;
+  border-bottom: solid 3px #a3e0d0;
+  font-family: 'Indie Flower', cursive;
+  font-size: 1rem;
+  color: rgba(63, 62, 65, 0.7);
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+ul {
+  margin-top: 10px !important;
+}
+
+li {
+  text-align: left;
+  position: relative;
+  margin-bottom: 1px;
+  font-family: 'Indie Flower', cursive;
+  margin-left: 10px;
+}
+
+.groceryNote {
+  width: 100%;
+  height: auto;
+  min-height: 500px;
+  max-width: 500px;
+  min-width: 250px;
+  background: white;
+  background-image: radial-gradient(#bfc0c1 7.2%, transparent 0);
+  background-size: 25px 25px;
+  border-radius: 3px;
+  -webkit-box-shadow: 4px 3px 7px 2px #00000040;
+          box-shadow: 4px 3px 7px 2px #00000040;
+  height: 100%;
+  background-image: repeating-linear-gradient(white 0px, white 24px, #a3e0d0 25px);
+  padding: 1.3rem 1rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 footer {
@@ -66,13 +121,13 @@ footer p {
 .circle-img {
   border-radius: 50%;
   border: 3px solid #0fab80;
-  width: 80px;
-  height: 80px;
-  margin-bottom: 1rem;
+  width: 50px;
+  height: 50px;
+  position: relative;
 }
 
 .name {
-  font-size: 1em;
+  font-size: 0.8em;
   color: #2d3436;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -80,7 +135,25 @@ footer p {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-bottom: 10px;
+}
+
+.productcolumn {
+  padding-top: 8px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.grocerylist {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 4rem;
+  margin-left: 4rem;
 }
 
 .productlist {
@@ -92,21 +165,44 @@ footer p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 4rem auto;
-  max-width: 90%;
+  margin-left: 4rem;
+  margin-top: 4rem;
+  max-width: 100%;
 }
 
 .productlist .card {
   text-align: center;
-  width: 10rem;
-  height: 10rem;
-  margin: 1rem;
-  padding: 2rem;
+  width: 13rem;
+  height: 5rem;
+  margin-left: 1rem;
+  margin-bottom: 1.5rem;
+  padding: 0.3rem;
   border-radius: 3px;
   -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
           box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   -webkit-transition: all 100ms ease-in-out;
   transition: all 100ms ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.productlist .card .container .row {
+  padding: 0.1rem;
+}
+
+button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  outline: 0;
+  background-color: #0fab80;
+  border: 1px solid #0fab80;
+  padding: 2px 2px;
+  color: white;
+  border-radius: 3px !important;
+  width: 90px;
+  font-size: 18px;
 }
 /*# sourceMappingURL=styles.css.map */
