--- a/public/stylesbackup.scss
+++ b/public/stylesbackup.scss
@@ -115,24 +115,25 @@ li {
     border-radius: 50%;
     border: 3px solid #DBBFAD;
     // border: 3px solid #0fab80;
-    width: 50px;
-    height: 50px;
+    width: 150px;
+    height: 150px;
     // margin-bottom: 0.7rem;
     position: relative;
     // vertical-align: middle;
+    background-color: #efc7ac;
   }
   
   .name {
     font-size: 0.8em;
-    color: #2d3436;
+    color: transparent;
     display: flex;
     flex: 1;   
     // padding-top: 1rem;     
     // padding-bottom: 1rem;
   }
   .productcolumn {
-    padding-top:8px;
-    margin-top: auto;
+    // padding-top:8px;
+    // margin-top: auto;
     margin-bottom: auto;
   }
   .grocerylist {
@@ -144,17 +145,19 @@ li {
   }
   .productlist {
     .card {
+      border: none;
         text-align: center;
         width: 13rem;
-        height:5rem;
-        margin-left: 1rem;
-        margin-bottom: 1.5rem;
+        height:13rem;
+        // margin-left: 1rem;
+        // margin-bottom: 1.5rem;
         padding: 0.3rem;
-        border-radius: 3px;
-        box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
-        background-color: #fff;
+        // border-radius: 3px;
+        // box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
+        background-color: transparent;
         transition: all 100ms ease-in-out;
         display: flex;
+        padding-top: 0;
       .container {
         .row {
           padding: 0.1rem;
@@ -188,8 +191,17 @@ li {
     border-radius: 50% !important;
     width: 26px !important;
     font-size: 13px;
-    margin-top: -20px; 
-    margin-left: -25px; 
+    margin-top: -50px; 
+    margin-left: -50px; 
     position: absolute;
+  }
+  .deleteButton {
+    border-radius: 50% !important;
+    width: 26px !important;
+    font-size: 13px;
+    color: red;
+    margin-left: 20px;
+    background-color: transparent;
+    border: none;
   }
   
