count works now, deleting the right items now

--- a/public/stylesbackup.scss
+++ b/public/stylesbackup.scss
@@ -195,6 +195,13 @@ li {
     margin-left: -50px; 
     position: absolute;
   }
+  .listButton {
+    border-radius: 50% !important;
+    width: 26px !important;
+    font-size: 13px;
+    margin-top: -50px; 
+    margin-left: 50px; 
+  }
   .deleteButton {
     border-radius: 50% !important;
     width: 26px !important;
