--- a/public/stylesbackup.css
+++ b/public/stylesbackup.css
@@ -155,7 +155,7 @@ footer p {
   margin-left: 4rem;
 }
 
-.productlist {
+.secondColumn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,6 +166,19 @@ footer p {
           justify-content: center;
   margin-left: 4rem;
   margin-top: 4rem;
+  max-width: 100%;
+}
+
+.productlist {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2rem;
   max-width: 100%;
 }
 
@@ -231,5 +244,57 @@ button {
   margin-left: 20px;
   background-color: transparent;
   border: none;
+}
+
+.inspirationButton {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.recipelist {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2rem;
+  max-width: 100%;
+}
+
+.recipelist .card {
+  border: none;
+  text-align: center;
+  width: 15rem;
+  padding: 0.3rem;
+  background-color: white !important;
+  -webkit-transition: all 100ms ease-in-out;
+  transition: all 100ms ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+
+.recipelist .card .recipeCardImage {
+  width: 14rem;
+  height: 9rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.recipelist .card .recipeImage {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.recipelist .card .container .row {
+  padding: 0.1rem;
 }
 /*# sourceMappingURL=stylesbackup.css.map */
