--- a/public/stylesbackup.css
+++ b/public/stylesbackup.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Oswald&family=Sacramento&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -30,8 +34,65 @@ header {
 
 header h1 {
   color: #fff;
-  font-family: "McLaren", cursive;
+  font-family: 'Fredericka the Great', cursive;
   font-weight: 200;
+  font-size: 3.0rem;
+}
+
+.inspirationHeader {
+  display: block;
+  font-family: 'Fredericka the Great', cursive;
+}
+
+.inspirationHeaderDiv {
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.inspirationList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2rem;
+  max-width: 100%;
+}
+
+.inspirationList .inspirationCardDiv :hover {
+  cursor: pointer;
+}
+
+.inspirationList .inspirationCardDiv .inspirationCard {
+  border: none;
+  text-align: center;
+  width: 15rem;
+  background-color: #efc7ac !important;
+  -webkit-transition: all 100ms ease-in-out;
+  transition: all 100ms ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  border: 3px solid #DBBFAD;
+}
+
+.inspirationList .inspirationCardDiv .inspirationImageDiv {
+  width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.inspirationList .inspirationCardDiv .inspirationImage {
+  width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .grocerylistheading h1 {
@@ -133,7 +194,7 @@ footer p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 4rem;
+  margin-top: 1rem;
   max-width: 100%;
 }
 
@@ -206,7 +267,7 @@ button {
   font-size: 13px;
   margin-left: 10px;
   background-color: transparent;
-  border: 1px solid #0A8F83;
+  border: none !important;
   color: #0A8F83;
 }
 
@@ -220,11 +281,32 @@ button {
   border: none;
 }
 
-.inspirationButton {
+.productsButton {
   margin-left: 5px;
   margin-right: 5px;
-  width: 90px;
-  padding: 2px 2px;
+  margin-bottom: 15px;
+  width: 240px;
+  height: 100px;
+  background-image: url(products.jpg);
+  background-position: center;
+  font-size: 3.6rem;
+  font-family: 'Amatic SC', cursive;
+  letter-spacing: 2px;
+  text-shadow: 1px 1px #000000;
+}
+
+.recipesButton {
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 15px;
+  width: 240px;
+  height: 100px;
+  background-image: url(madras.jpg);
+  background-position: center;
+  font-size: 3.6rem;
+  font-family: 'Amatic SC', cursive;
+  letter-spacing: 2px;
+  text-shadow: 1px 1px #000000;
 }
 
 .recipelist {
@@ -287,6 +369,12 @@ button {
   padding: 0.3rem !important;
 }
 
+.togglebutton:focus {
+  border: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -306,5 +394,36 @@ ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.productCardName {
+  font-size: 1.0rem;
+  margin-top: -8px;
+  letter-spacing: 1px;
+  font-family: 'Amatic SC', cursive;
+}
+
+.recipeAddButton {
+  margin-left: 80px !important;
+  border-radius: 50% !important;
+  width: 26px !important;
+  font-size: 13px;
+  margin-top: -31px;
+  margin-left: 85px;
+  position: absolute;
+  padding: 2px 2px;
+}
+
+.recipeNameBox {
+  height: 80%;
+}
+
+.printcol-1 {
+  min-width: 200px;
+}
+
+.printButton {
+  margin-top: 58px;
+  padding: 2px 2px;
 }
 /*# sourceMappingURL=stylesbackup.css.map */
