--- a/public/styles.css
+++ b/public/styles.css
@@ -66,6 +66,7 @@ header h1 {
   font-family: 'Fredericka the Great', cursive;
   font-weight: 200;
   font-size: 3.0rem;
+  text-align: center;
 }
 
 .secondColumn {
@@ -466,6 +467,15 @@ button {
 .printButton {
   margin-top: 58px;
   padding: 2px 2px;
-  width: 120px;
+  width: 130px;
+}
+
+@media only screen and (max-width: 600px) {
+  header h1 {
+    font-size: 1.5rem;
+  }
+  .groceryNote {
+    min-width: 300px !important;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
